k8s_manifests/prod/app-canary/canary80/vs-frontend.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: frontend
  namespace: frontend
spec:
  hosts:
  - frontend
  http:
  - route:
    - destination:
        host: frontend
        subset: v1
        port:
          number: 80
      weight: 20
    - destination:
        host: frontend
        subset: v2
        port:
          number: 80
      weight: 80
